--- a/plugin.xml
+++ b/plugin.xml
@@ -57,7 +57,7 @@ AND MAY NOT BE RESOLD OR REDISTRIBUTED. USAGE IS BOUND TO THE PSPDFKIT LICENSE A
     <resource-file src="src/android/res/drawable/boiler.png" target="res/drawable/boiler.png"/>
     <resource-file src="src/android/res/drawable/chiller.png" target="res/drawable/chiller.png"/>
     <resource-file src="src/android/res/drawable/electric_motor_hvac.png" target="res/drawable/electric_motor_hvac.png"/>
-    v<resource-file src="src/android/res/drawable/pump.png" target="res/drawable/pump.png"/>
+    <resource-file src="src/android/res/drawable/pump.png" target="res/drawable/pump.png"/>
     <resource-file src="src/android/res/drawable/roof_top_unit.png" target="res/drawable/roof_top_unit.png"/>
     <resource-file src="src/android/res/drawable/thermostat.png" target="res/drawable/thermostat.png"/>
     <resource-file src="src/android/res/values/ids.xml" target="res/values/ids.xml"/>
