--- a/plugin.xml
+++ b/plugin.xml
@@ -61,19 +61,46 @@ AND MAY NOT BE RESOLD OR REDISTRIBUTED. USAGE IS BOUND TO THE PSPDFKIT LICENSE A
     <resource-file src="src/android/res/drawable/pump.png" target="res/drawable/pump.png"/>
     <resource-file src="src/android/res/drawable/roof_top_unit.png" target="res/drawable/roof_top_unit.png"/>
     <resource-file src="src/android/res/drawable/thermostat.png" target="res/drawable/thermostat.png"/>
-    <resource-file src="src/android/assets/images/PSPDFKit_Logo.pdf" target="assets/images/PSPDFKit_Logo.pdf"/>
-    <resource-file src="src/android/assets/images/ac_unit.pdf" target="assets/images/ac_unit.pdf"/>
-    <resource-file src="src/android/assets/images/air_compressor.pdf" target="assets/images/air_compressor.pdf"/>
-    <resource-file src="src/android/assets/images/air_dryer.pdf" target="assets/images/air_dryer.pdf"/>
-    <resource-file src="src/android/assets/images/air_handling_unit.pdf" target="assets/images/air_handling_unit.pdf"/>
-    <resource-file src="src/android/assets/images/boiler.pdf" target="assets/images/boiler.pdf"/>
+    <!-- <resource-file src="src/android/assets/images/PSPDFKit_Logo.pdf" target="assets/images/PSPDFKit_Logo.pdf"/> -->
+    <resource-file src="src/android/assets/images/air-conditioning-unit.pdf" target="assets/images/air-conditioning-unit.pdf"/>
+    <resource-file src="src/android/assets/images/air-handler-unit.pdf" target="assets/images/air-handler-unit.pdf"/>
+    <resource-file src="src/android/assets/images/backup-generator.pdf" target="assets/images/backup-generator.pdf"/>
+    <resource-file src="src/android/assets/images/blue-light.pdf" target="assets/images/blue-light.pdf"/>
     <resource-file src="src/android/assets/images/chiller.pdf" target="assets/images/chiller.pdf"/>
-    <resource-file src="src/android/assets/images/electric_motor_hvac.pdf" target="assets/images/electric_motor_hvac.pdf"/>
-    <resource-file src="src/android/assets/images/expansion_tank.pdf" target="assets/images/expansion_tank.pdf"/>
-    <resource-file src="src/android/assets/images/fan.pdf" target="assets/images/fan.pdf"/>
-    <resource-file src="src/android/assets/images/pump.pdf" target="assets/images/pump.pdf"/>
-    <resource-file src="src/android/assets/images/roof_top_unit.pdf" target="assets/images/roof_top_unit.pdf"/>
-    <resource-file src="src/android/assets/images/thermostat.pdf" target="assets/images/thermostat.pdf"/>
+    <resource-file src="src/android/assets/images/co-detector.pdf" target="assets/images/co-detector.pdf"/>
+    <resource-file src="src/android/assets/images/condensor.pdf" target="assets/images/condensor.pdf"/>
+    <resource-file src="src/android/assets/images/defibrilator.pdf" target="assets/images/defibrilator.pdf"/>
+    <resource-file src="src/android/assets/images/diffuser-heating-cooling.pdf" target="assets/images/diffuser-heating-cooling.pdf"/>
+    <resource-file src="src/android/assets/images/drinking-fountain.pdf" target="assets/images/drinking-fountain.pdf"/>
+    <resource-file src="src/android/assets/images/electric-meter.pdf" target="assets/images/electric-meter.pdf"/>
+    <resource-file src="src/android/assets/images/electric-motor.pdf" target="assets/images/electric-motor.pdf"/>
+    <resource-file src="src/android/assets/images/emergency-recovery-ventilation.pdf" target="assets/images/emergency-recovery-ventilation.pdf"/>
+    <resource-file src="src/android/assets/images/entrance-door-designator.pdf" target="assets/images/entrance-door-designator.pdf"/>
+    <resource-file src="src/android/assets/images/exhaust-fan.pdf" target="assets/images/exhaust-fan.pdf"/>
+    <resource-file src="src/android/assets/images/expansion-tank.pdf" target="assets/images/expansion-tank.pdf"/>
+    <resource-file src="src/android/assets/images/eye-wash-station.pdf" target="assets/images/eye-wash-station.pdf"/>
+    <resource-file src="src/android/assets/images/fire-alarm.pdf" target="assets/images/fire-alarm.pdf"/>
+    <resource-file src="src/android/assets/images/fire-alarm-control-panel.pdf" target="assets/images/fire-alarm-control-panel.pdf"/>
+    <resource-file src="src/android/assets/images/fire-extinguisher.pdf" target="assets/images/fire-extinguisher.pdf"/>
+    <resource-file src="src/android/assets/images/fire-hydrant.pdf" target="assets/images/fire-hydrant.pdf"/>
+    <resource-file src="src/android/assets/images/first-aid-station.pdf" target="assets/images/first-aid-station.pdf"/>
+    <resource-file src="src/android/assets/images/gas-meter.pdf" target="assets/images/gas-meter.pdf"/>
+    <resource-file src="src/android/assets/images/glycol-tank.pdf" target="assets/images/glycol-tank.pdf"/>
+    <resource-file src="src/android/assets/images/grease-trap.pdf" target="assets/images/grease-trap.pdf"/>
+    <resource-file src="src/android/assets/images/handicap-accessibility.pdf" target="assets/images/handicap-accessibility.pdf"/>
+    <resource-file src="src/android/assets/images/main-distribution-panel.pdf" target="assets/images/main-distribution-panel.pdf"/>
+    <resource-file src="src/android/assets/images/makeup-air.pdf" target="assets/images/makeup-air.pdf"/>
+    <resource-file src="src/android/assets/images/panel-electric.pdf" target="assets/images/panel-electric.pdf"/>
+    <resource-file src="src/android/assets/images/pump-hvac.pdf" target="assets/images/pump-hvac.pdf"/>
+    <resource-file src="src/android/assets/images/pump-potable.pdf" target="assets/images/pump-potable.pdf"/>
+    <resource-file src="src/android/assets/images/return-air.pdf" target="assets/images/return-air.pdf"/>
+    <resource-file src="src/android/assets/images/roof-access.pdf" target="assets/images/roof-accesspdf"/>
+    <resource-file src="src/android/assets/images/unit-heater.pdf" target="assets/images/unit-heater.pdf"/>
+    <resource-file src="src/android/assets/images/unit-ventilator-cabinet-type.pdf" target="assets/images/unit-ventilator-cabinet-type.pdf"/>
+    <resource-file src="src/android/assets/images/unit-ventilator-wall-type.pdf" target="assets/images/unit-ventilator-wall-type.pdf"/>
+    <resource-file src="src/android/assets/images/valve-generic.pdf" target="assets/images/valve-generic.pdf"/>
+    <resource-file src="src/android/assets/images/water-meter.pdf" target="assets/images/water-meter.pdf"/>
+    <resource-file src="src/android/assets/images/water-softening-tank.pdf" target="assets/images/water-softening-tank.pdf"/>
     <resource-file src="src/android/res/values/ids.xml" target="res/values/ids.xml"/>
     <framework custom="true" src="src/android/config.gradle" type="gradleReference" />
     <framework custom="true" src="src/android/pspdfkit.gradle" type="gradleReference" />
